# unsplash_actix_react

./: .gitignore  Cargo.toml  readme.md
frontend/: package.json
frontend/src/api/: unsplash.js
frontend/src/components/: App.js  ImageCard.js  ImageList.js  SearchBar.js
frontend/src/config/: config.json
src/: main.rs
